<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.formacion.juanjosecanotena.jjct_calculaimc.MainActivity"
    tools:background="@android:color/holo_blue_dark">

    <RelativeLayout
        android:layout_width="match_parent"


        android:id="@+id/rlCabecera"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:text="SALIR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:id="@+id/bSalir" />

        <Button
            android:text="BAJA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:id="@+id/bBaja"
            android:layout_toRightOf="@id/bSalir"
             />
        <Button
            android:text="CERRAR SESION"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:id="@+id/bCerrarSesion"
            android:layout_toRightOf="@id/bBaja"
            android:textSize="14sp" />

        <TextView
            android:text="Juan José Cano Tena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bSalir"
            android:id="@+id/tvNombreApe"
            android:layout_marginTop="15px"
            android:textSize="24sp"

            android:paddingLeft="30dp"
            android:paddingTop="10dp" />
        <TextView
            android:text="Último peso: 77 Kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNombreApe"
            android:id="@+id/tvUltimoPeso"
            android:layout_marginTop="15px"
            android:textSize="24sp"

            android:paddingLeft="30dp"
            android:paddingTop="10dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlCuerpo"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlCabecera">

        <TextView
            android:text="@string/calculaTuIMC"
            android:layout_width="match_parent"
            android:id="@+id/tvTitulo"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            tools:textColor="@android:color/background_light"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitulo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tvPeso"
            android:textSize="24sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|numberDecimal"
            android:ems="10"
            android:layout_below="@+id/tvPeso"
            android:layout_alignLeft="@+id/tvPeso"
            android:layout_alignStart="@+id/tvPeso"
            android:layout_marginTop="5dp"
            android:id="@+id/etPeso"
            android:background="@android:color/holo_orange_light"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="22sp"
            android:width="150dp"
            />

        <TextView
            android:text="@string/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPeso"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tvAltura"
            android:textSize="24sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|numberDecimal"
            android:ems="10"
            android:layout_below="@+id/tvAltura"
            android:layout_alignLeft="@+id/tvAltura"
            android:layout_alignStart="@+id/tvAltura"
            android:layout_marginTop="5dp"
            android:id="@+id/etAltura"
            android:background="@android:color/holo_orange_light"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="22sp"
            android:width="150dp"
            />

        <TextView
            android:text="Cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etAltura"
            android:layout_toRightOf="@+id/etAltura"
            android:layout_toEndOf="@+id/etAltura"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/tvCm"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bCalcular"
            android:id="@+id/tvParametrosIncorrectos"
            android:text="@string/parametrosIncorrectos"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"

            android:layout_marginTop="15dp" />

        <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bCalcular"
            android:textSize="24sp"
            android:width="300dp"
            android:layout_below="@id/etAltura"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:elevation="0dp" />

        <TextView
            android:text="Kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvKg"
            android:textSize="28sp"
            android:layout_alignBottom="@+id/etPeso"
            android:layout_alignLeft="@+id/tvCm"
            android:layout_alignStart="@+id/tvCm" />

    </RelativeLayout>


</RelativeLayout>
